--- a/GreenShop/web/Style/TopHeader.css
+++ b/GreenShop/web/Style/TopHeader.css
@@ -3,6 +3,7 @@
     color: gray;
     background-color: #202020;
     font-size:0.85em;
+     font-family: Arial, Helvetica, sans-serif;
 }
 .TopHeader-inner {
     width:80%;
