--- a/GreenShop/web/Style/reset.css
+++ b/GreenShop/web/Style/reset.css
@@ -5,7 +5,7 @@ html, body, span, hr, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockqu
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline
+    vertical-align: baseline;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
